--- a/deploy/charts/harvester-crd/templates/harvesterhci.io_virtualmachinebackups.yaml
+++ b/deploy/charts/harvester-crd/templates/harvesterhci.io_virtualmachinebackups.yaml
@@ -143,6 +143,8 @@ spec:
                     format: date-time
                     type: string
                 type: object
+              progress:
+                type: integer
               readyToUse:
                 type: boolean
               secretBackups:
@@ -4081,6 +4083,8 @@ spec:
                   description: VolumeBackup contains the volume data need to restore
                     a PVC
                   properties:
+                    backupProgress:
+                      type: integer
                     creationTime:
                       format: date-time
                       type: string
@@ -4286,6 +4290,9 @@ spec:
                       type: boolean
                     volumeName:
                       type: string
+                    volumeSize:
+                      format: int64
+                      type: integer
                   required:
                   - csiDriverName
                   - persistentVolumeClaim
