Correct export img reconcile and report progress message

--- a/deploy/charts/harvester-crd/templates/harvesterhci.io_imgencrypters.yaml
+++ b/deploy/charts/harvester-crd/templates/harvesterhci.io_imgencrypters.yaml
@@ -51,6 +51,8 @@ spec:
             type: object
           status:
             properties:
+              message:
+                type: string
               stage:
                 format: int64
                 type: integer
