feat(schedule vm backup): Support proactive suspend/resume, cron update and adjustment for LH v1.7.0
1. Support proactive suspend/resume schedule
2. Support update cron expression at runtime
3. Fix compile error after Wrangler updated to v3
4. Removing auto LH snapshot cleanse (AutoCleanupSnapshotWhenDeleteBackup is enabled by default)

Signed-off-by: Webber Huang <webber.huang@suse.com>

--- a/deploy/charts/harvester-crd/templates/harvesterhci.io_schedulevmbackups.yaml
+++ b/deploy/charts/harvester-crd/templates/harvesterhci.io_schedulevmbackups.yaml
@@ -27,8 +27,8 @@ spec:
     - jsonPath: .spec.maxFailure
       name: MaxFailure
       type: integer
-    - jsonPath: .spec.resumeRequest
-      name: ResumeRequest
+    - jsonPath: .spec.suspend
+      name: SpecSuspend
       type: boolean
     - jsonPath: .spec.vmbackup.source.name
       name: Source
@@ -68,13 +68,14 @@ spec:
                 default: 4
                 minimum: 2
                 type: integer
-              resumeRequest:
-                type: boolean
               retain:
                 default: 8
                 maximum: 250
                 minimum: 2
                 type: integer
+              suspend:
+                default: false
+                type: boolean
               vmbackup:
                 properties:
                   source:
